--- a/style.css
+++ b/style.css
@@ -78,16 +78,8 @@ footer {
 #mc_embed_signup .button {
     background-color: #ff0981 !important;
 }
-@media only screen and (max-width: 1352px) {
-    .coming_soon_img {
-        width: 490px;
-    }
-}
-
-@media only screen and (max-width: 1260px) {
-    .coming_soon_img {
-        width: 380px;
-    }
+.coming_soon {
+    font-size: 40px;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -99,8 +91,8 @@ footer {
         width: 54.5vw;
     }
 
-    .coming_soon_img {
-        width: 311px;
+    .coming_soon {
+        font-size: 30px;
     }
 }
 
@@ -140,12 +132,8 @@ footer {
     }
 }
 @media only screen and (max-width: 500px) {
-    .coming_soon_img {
-        width: 260px;
+    .coming_soon {
+        font-size: 30px;
     }
 }
-@media only screen and (max-width: 388px) {
-    .coming_soon_img {
-        width: 210px;
-    }
-}
+
